tmp.log
src/format_elf.c:2:47: error: unknown type name ‘t_reg’
    2 | static const char *elf_emit_make_writable_asm(t_reg addr_reg, t_reg len_reg)
      |                                               ^~~~~
src/format_elf.c:2:63: error: unknown type name ‘t_reg’
    2 | static const char *elf_emit_make_writable_asm(t_reg addr_reg, t_reg len_reg)
      |                                                               ^~~~~
src/format_elf.c:17:49: error: unknown type name ‘t_reg’
   17 | static const char *elf_emit_make_executable_asm(t_reg addr_reg, t_reg len_reg)
      |                                                 ^~~~~
src/format_elf.c:17:65: error: unknown type name ‘t_reg’
   17 | static const char *elf_emit_make_executable_asm(t_reg addr_reg, t_reg len_reg)
      |                                                                 ^~~~~
src/format_elf.c:32:1: error: unknown type name ‘t_format_backend’
   32 | t_format_backend g_elf_backend = {
      | ^~~~~~~~~~~~~~~~
src/format_elf.c:33:5: error: field name not in record or union initializer
   33 |     .format = FORMAT_ELF,
      |     ^
src/format_elf.c:33:5: note: (near initialization for ‘g_elf_backend’)
src/format_elf.c:33:15: error: ‘FORMAT_ELF’ undeclared here (not in a function)
   33 |     .format = FORMAT_ELF,
      |               ^~~~~~~~~~
src/format_elf.c:34:5: error: field name not in record or union initializer
   34 |     .emit_make_writable_asm = elf_emit_make_writable_asm,
      |     ^
src/format_elf.c:34:5: note: (near initialization for ‘g_elf_backend’)
src/format_elf.c:34:31: error: ‘elf_emit_make_writable_asm’ undeclared here (not in a function)
   34 |     .emit_make_writable_asm = elf_emit_make_writable_asm,
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
src/format_elf.c:34:31: error: excess elements in scalar initializer [-Werror]
src/format_elf.c:34:31: note: (near initialization for ‘g_elf_backend’)
src/format_elf.c:35:5: error: field name not in record or union initializer
   35 |     .emit_make_executable_asm = elf_emit_make_executable_asm,
      |     ^
src/format_elf.c:35:5: note: (near initialization for ‘g_elf_backend’)
src/format_elf.c:35:33: error: ‘elf_emit_make_executable_asm’ undeclared here (not in a function)
   35 |     .emit_make_executable_asm = elf_emit_make_executable_asm,
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/format_elf.c:35:33: error: excess elements in scalar initializer [-Werror]
src/format_elf.c:35:33: note: (near initialization for ‘g_elf_backend’)
cc1: all warnings being treated as errors
make: *** [Makefile:30: obj/format_elf.o] Error 1
